# 5Day_AI_Agents_Intensive_Vibe_Coding_Course_With_Google

./: .gitignore  README.md  api.txt
5Day_AI_Agents_Intensive_Vibe_Coding_Course_With_Course_Day5/expense-agent/: query_deployed.py
Ag2_Projects/: .agents-cli-spec.md
Ag2_Projects/google-cloud-serverless-app/: Build-Deploy_GC_Workflow.md  README.md  Workflow_Build_Deploy_On_GC.md  bq_schema.json  deploy.ps1  deploy.sh  teardown.sh
Ag2_Projects/my_first_project/: nano demo_bad_code.py.py  package.json
Day1/: Readme.md
Day2/: Day2_GDKAPI_MCP_in_Antigravity,IDE,CLI.md  Day2_HandOn_AntigravityCLI.md  GWspce_MCP_Antigrty_CLI_IDE.md
Day3/: Antigravity_skills.md  Readme.md
Day3/Day4/: Ambient_Agent_Ag2.0_CLI_ADK.md
Day3/customer-support-agent/: agents-cli-manifest.yaml  walkthrough.md
Day4/: Ambient_Agent_Ag2.0_CLI_ADK.md  DeployADKAgent_AgentRuntime.md  Readme.md
Day4/Shopppin_assistance/: README.md
Day4/ambient-expense-agent/: Makefile  README.md  agents-cli-manifest.yaml  pyproject.toml  walkthrough.md
Day4/secure-agent-lab/: implementation_plan_cart_checkout  implementation_plan_loyaltypoints_tool  implementation_plan_scaffolding
Day5/: DeployADKAgent_AgentRuntime.md  DeployFrontEnd_ADKAgent.md
Day5/expense-agent/: README.md  agents-cli-manifest.yaml  deployment_metadata.json  (+1 more)
Day5/expense-agent/submission_frontend/: Dockerfile  README.md  implementation_plan.md  main.py  pyproject.toml  walkthrough.md  walkthrough_deployment.md
documentation/: BDD_TDD_Gerkin.md  Day1_Asnt_Deploy_Cloud_Run.md  Day2_GDKAPI_MCP_in_Antigravity,IDE,CLI.md
(+35 files in other folders)
