[project]
name = "submission-frontend"
version = "0.1.0"
description = "FastAPI manager dashboard for expense agent"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.28.0",
    "google-adk>=0.5.0",
    "google-cloud-aiplatform>=1.48.0",
    "jinja2>=3.1.3",
    "python-dotenv>=1.0.1",
]
